weniger pretentious title

--- a/branch_cut_tangles.tex
+++ b/branch_cut_tangles.tex
@@ -132,7 +132,7 @@ Refname={Theorem,Theorems}]{maintheorem}
 \newcommand\mqty[1]{\begin{pmatrix}#1\end{pmatrix}}
 
 \begin{document}
-\title{Branch Cut Tangles Part I: Four dimensions from two}
+\title{Branch Cut Tangles Part I}
 \author{Joel Schmitz}
 \maketitle
 
